Fix issue where scrollbar moved layout

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -9,6 +9,11 @@ html {
     font-family: Roboto,Helvetica,Arial,sans-serif;
 }
 
+body {
+    overflow-y: scroll;
+    overflow-x: auto;
+}
+
 *,
 *:before,
 *:after {
